--- a/src/ProjectTemplates/Web.Spa.ProjectTemplates/content/Angular-CSharp/Pages/Shared/_LoginPartial.cshtml
+++ b/src/ProjectTemplates/Web.Spa.ProjectTemplates/content/Angular-CSharp/Pages/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using angular.Models;
+@using Company.WebApplication1.Models;
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
