[Components] Prerrendering startup experience * Introduces an IComponentPrerrenderer to handle Prerrendering   * MVC registers a basic static prerrrenderer.   * Components registers a more feature complete prerrender that will     handle reconnection to the original circuit after prerrendering in     the future to allow for prerrendered interactive components. * Removes UseRazorComponents   * Removes the SPA fallback in favor of a catch all route in     Index.cshtml   * Moves the framework files to be served by the default StaticFiles     middleware in the pipeline by way of plugging specific providers     through options.   * Lifts UseSignalR(r => r.MapHub<ComponentHub>()) into startup and     replaces it with a shorthand for MapHub using endpoint routing.   * Adds extension methods to map components to selectors for a given     hub.

--- a/src/Components/test/testassets/ComponentsApp.Server/Pages/Index.cshtml
+++ b/src/Components/test/testassets/ComponentsApp.Server/Pages/Index.cshtml
@@ -1,3 +1,8 @@
+@page "{*clientroutes}"
+@using ComponentsApp.App
+@model ComponentsApp.Server.Pages.IndexModel
+@{
+}
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,8 +14,9 @@
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
-    <app>Loading...</app>
+    <app>@(await Html.RenderComponentAsync<App>())</app>
 
     <script src="_framework/components.server.js"></script>
 </body>
 </html>
+
